Fix the CSP problem with .gscrollbar-fixer

--- a/src/postcss/glightbox.css
+++ b/src/postcss/glightbox.css
@@ -3,10 +3,6 @@
 @custom-media --medium-viewport (width >=992px);
 @custom-media --large-viewport (width >=1200px);
 
-.gscrollbar-fixer {
-    margin-right: var(--gscrollbar-fixer);
-}
-
 .glightbox-container {
     width: 100%;
     height: 100%;
